# Obo-s-PyGadgeteer

./: .gitignore  LICENSE.txt  README.md  SENSITIVITY_LABEL_MANAGER.md  SensitivityLabelManager.md  pyproject.toml  requirements.txt
docs/source/: conf.py  demos.rst  demos_sensitivity_labels.rst  index.rst  modules.rst  pygadgeteer.demos.rst  pygadgeteer.json_toolbox.rst  pygadgeteer.office_toolbox.rst  pygadgeteer.openpyxl_toolbox.rst  pygadgeteer.rst
pygadgeteer/demos/: demo_excel_sensitivity_manager.py  demo_excel_sensitivity_with_openpyxl.py  demo_word_sensitivity_manager.py
pygadgeteer/json_toolbox/: __init__.py  datetime_encoder.py
pygadgeteer/office_toolbox/: abstract_document_manager.py  document_manager_factory.py  excel_document_manager.py  sensitivity_manager.py  set_sensitivity_label.py  word_document_manager.py
pygadgeteer/openpyxl_toolbox/: sensitivity_manager.py
scripts/: build_docs.bat  build_package.bat  doc_server.bat
